--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -31,7 +31,7 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
     &__information:nth-child(2) {
-        margin-bottom: 10px; /* Или используйте другие единицы измерения, например, 1rem */
+        margin-bottom: 10px;
       }
     &__textGrey {
         color: #a0b0b9;
